# JoJo-Bizarre-Agent

./: .gitignore  .gitmodules  PLAN.md  README.md  agent.yaml  agent_core.py  agent_tools.py  demo.py  pyproject.toml
app/: __init__.py  config.py
app/core/: __init__.py  embeddings.py  react_agent.py  vector_store.py
app/tools/: __init__.py  read_file.py  search.py
skills/debugging/: SKILL.md
skills/design_review/: SKILL.md
skills/retrospective/: SKILL.md
skills/tdd/: SKILL.md
src/jojo/: bootstrap.py  config.py  main.py  repl.py
src/jojo/core/: agent_loop.py  context_manager.py  jojo.py  message_bus.py  prompt_engine.py
src/jojo/jojo_stands/: __init__.py  base.py  crazy_diamond.py  gold_experience.py  soft_and_wet.py  star_platinum.py  stone_free.py  tusk.py
src/jojo/mcp/: client.py  skill_loader.py  tool_registry.py
src/jojo/memory/: compactor.py  store.py  summarizer.py
src/jojo/services/: backend.py  backend_opencode.py  backend_tmux.py  email_notifier.py  heartbeat.py  permission.py  subagent.py
src/jojo/stands/: __init__.py  base.py  crazy_diamond.py  gold_experience.py  harvest.py  hierophant_green.py  runner.py  sheer_heart_attack.py  star_platinum.py  the_world.py
src/react_agent/: __init__.py  config.py  main.py
src/react_agent/core/: agent_loop.py  context_manager.py  prompt_engine.py
src/react_agent/mcp/: client.py  skill_loader.py  tool_registry.py
src/react_agent/memory/: fallback.py  store.py  summarizer.py
src/react_agent/services/: email_notifier.py  heartbeat.py  permission.py  subagent.py
src/react_agent/stands/: __init__.py  arrow.py  base.py  harvest.py  hierophant_green.py  sheer_heart_attack.py  the_world.py
src/stand_master/: __init__.py  bootstrap.py  main.py  repl.py
src/stand_master/core/: agent_loop.py  prompt_engine.py
src/stand_master/mcp/: client.py  (+1 more)
tests/: conftest.py  test_agent_config.py  test_agent_core.py  test_agent_loop.py  test_agent_tools.py  test_config.py  test_context_manager.py  test_demo.py  test_email_notifier.py  test_embeddings.py  test_heartbeat.py  test_mcp_client.py  test_memory_store.py  test_permission.py  test_react_agent.py  test_skill_loader.py  test_subagent.py  test_summarizer.py  test_tool_registry.py  test_tools.py  test_vector_store.py
(+14 files in other folders)
