[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jojo"
version = "0.3.0"
description = "JoJo's Bizarre Agent — Multi-agent orchestrator with Stand persona architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "langchain-openai>=0.1",
    "mcp>=1.0",
    "smak",
    "faiss-storage-lib",
]

[project.optional-dependencies]
opencode = [
    "opencode-ai>=0.1.0a30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
jojo = "jojo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
